# generate_assistance

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml
docs/: PENDIENTES.md
projects/Capitulo1/: guion.json
projects/Capitulo1/mascota/: LEEME.md
projects/Capitulo1/mascota/celebrate/: PROMPT.txt
projects/Capitulo1/mascota/idle/: PROMPT.txt
projects/Capitulo1/mascota/jump/: PROMPT.txt
projects/Capitulo1/mascota/laugh/: PROMPT.txt
projects/Capitulo1/mascota/point/: PROMPT.txt
projects/Capitulo1/mascota/sad/: PROMPT.txt
projects/Capitulo1/mascota/scared/: PROMPT.txt
projects/Capitulo1/mascota/surprised/: PROMPT.txt
projects/Capitulo1/mascota/talk/: PROMPT.txt
projects/Capitulo1/mascota/think/: PROMPT.txt
projects/Capitulo1/mascota/walk/: PROMPT.txt
src/illustrated_narrator/cli/: main.py
src/illustrated_narrator/infrastructure/: config.py  container.py  ffmpeg_locator.py  logging_config.py
src/illustrated_narrator/ports/: depth_estimator.py  image_generator.py  publisher.py  stock_audio.py  stock_media.py  transcription.py  video_assembler.py
tests/: test_ass_writer.py  test_brand_palette.py  test_facebook_adapter.py  test_ffmpeg_assembler.py  test_forced_aligner.py  test_guion_mascota.py  test_image_cleaner.py  test_mascot_director.py  test_motion_profile.py  test_parallax.py  test_pexels_video_adapter.py  test_render_timeline.py  test_research_plano_media.py  test_retention_plan.py  test_shot_assets.py  test_transcript_store.py
tools/: generate_mascot_sprites.py  run_a1111.bat
(+41 files in other folders)
